<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madaim.ex7.RegisterActivity"
    android:background="#e5f442">

    <TextView
        android:id="@+id/TVfirst"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FN"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_below="@id/TVfirst"
        android:layout_marginTop="70dp"
        android:textSize="20dp"
        android:id="@+id/TVlast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LN"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/ETfirst"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="7dp"
        tools:layout_editor_absoluteX="127dp" />

    <EditText
        android:id="@+id/ETsecond"
        android:layout_below="@id/TVfirst"
        android:layout_marginTop="63dp"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="59dp"
        tools:layout_editor_absoluteX="127dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ETsecond"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbm" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbf" />
    </RadioGroup>

    <Button
        android:id="@+id/sendBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/sendBTN" />
</RelativeLayout>
